--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^6.1.0",
     "browserify-shim": "^3.8.0",
     "connect-livereload": "^0.5.0",
+    "express": "^4.9.8",
     "gulp": "^3.8.9",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-browserify": "^0.5.0",
