--- a/package.json
+++ b/package.json
@@ -8,6 +8,25 @@
   },
   "author": "Eve workshop",
   "license": "MIT",
+  "browser": {
+    "angular": "./bower_components/angular/angular.js",
+    "angular-touch": "./bower_components/angular-touch/angular-touch.js",
+    "angular-route": "./bower_components/angular-route/angular-route.js"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "angular",
+    "angular-touch": {
+      "depends": ["angular"]
+    },
+    "angular-route": {
+      "depends": ["angular"]
+    }
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^6.1.0",
